--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "recharts": "^2.1.16",
+    "sass": "^1.56.1",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
