--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/styled-engine-sc": "^5.10.14",
     "@mui/x-data-grid": "^5.17.13",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "recharts": "^2.1.16",
